# SCUQuickEvaluation

./: Cargo.toml  README.md  SCUQuickEvaluation.py  client.go  go.mod  go.sum  main.go  requirements.txt  ui.go
src/: main.rs
