[package]
name = "SCUQuickEvaluation"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
md-5 = "0.10.6"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json","multipart"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "7.3.1"

[profile.release]
panic = "abort"
lto = true
